<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment2">



    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/narutoo" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud_image_sombre" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/backgroud_textview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/button_all_i_want"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/want"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/takeonme"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/never"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/pompei"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/swater_weather"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView155"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView156"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />



            <TextView
                android:id="@+id/textView157"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />




            <TextView
                android:id="@+id/textView158"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />




            <TextView
                android:id="@+id/textView159"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />




            <TextView
                android:id="@+id/textView150"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />




            <TextView
                android:id="@+id/textView151"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />




            <TextView
                android:id="@+id/textView152"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />




            <TextView
                android:id="@+id/textView153"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />



            <TextView
                android:id="@+id/textView154"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/nulo"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />





            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bordershape"
                android:gravity="center"
                android:text="@string/want"
                android:textColor="#FFFFFF"

                android:textSize="20sp" />


        </LinearLayout>


    </ScrollView>
</FrameLayout>